--- a/src/app/pages/recive-report/recive-report.page.scss
+++ b/src/app/pages/recive-report/recive-report.page.scss
@@ -7,3 +7,18 @@
   font-size: x-large;
   font-family: Lalezar;
 }
+:host{
+  background:url("/assets/bg-1.jpg");
+  background-size: cover;
+  background-position: center bottom;
+}
+.background {
+  --background: rgba(255,255,255,0.5);
+}
+.mylist{
+  ion-item{
+    --background: rgba(255,255,255,0.9);
+  }
+
+}
+
