--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,3 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" side="end" contentId="main-content" type="push">
-      <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
-
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-          <ion-menu-toggle auto-hide="false">
-            <ion-item (click)="logout()" routerDirection="root" lines="none" detail="false">
-              <ion-icon slot="start" ios="log-out-outline" md="log-out-sharp"></ion-icon>
-              <ion-label>خروج</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-
-
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+  <ion-router-outlet  ></ion-router-outlet>
 </ion-app>
