--- a/src/app/login/get-ip/get-ip.page.html
+++ b/src/app/login/get-ip/get-ip.page.html
@@ -1,37 +1,31 @@
-<ion-content class="background" >
+<ion-content class="background">
+    <div class="mycontainer">
+        <div class="card-bg">
+                <div style="display: flex;margin-top: -75px;margin-bottom: 25px" class="ion-justify-content-center">
+                    <img height="100px" src="assets/logo.svg">
+                </div>
 
-
-<div class="container">
-  <ion-card>
-    <ion-card-header dir="auto">
-      <div style="display: flex" class="ion-justify-content-center">
-        <img height="100px" src="assets/logo.png">
-      </div>
-    </ion-card-header>
-    <ion-card-content>
-      <form [formGroup]="getFormIP" (ngSubmit)="checkIp()">
-        <ion-item class="item-input" >
-          <ion-label  position="floating" class="text-style button">کد مجموعه</ion-label>
-          <ion-input  formControlName="codeIp" class="item-form ion-text-center ltr" type="number"></ion-input>
-        </ion-item>
-        <div class="validation-box">
-          <div *ngIf="getFormIP.invalid">&nbsp;</div>
-          <div *ngIf="getFormIP.invalid && isSubmit">
-            <ion-icon name="information-circle" size="small"></ion-icon>
-            <span>شماره کد خود را بدرستی وارد کنید.</span>
-          </div>
+               <div class="container">
+                   <form [formGroup]="getFormIP" (ngSubmit)="checkIp()">
+                       <ion-item class="item-input">
+                           <ion-label position="floating" class="text-style button">کد مجموعه</ion-label>
+                           <ion-input formControlName="codeIp" class="item-form ion-text-center ltr"
+                                      type="number"></ion-input>
+                       </ion-item>
+                       <div class="validation-box">
+                           <div *ngIf="getFormIP.invalid">&nbsp;</div>
+                           <div *ngIf="getFormIP.invalid && isSubmit">
+                               <ion-icon name="information-circle" size="small"></ion-icon>
+                               <span>شماره کد خود را بدرستی وارد کنید.</span>
+                           </div>
+                       </div>
+                       <ion-button [disabled]="loading" type="submit" class="button item-input" expand="block"
+                                   color="primary">
+                           <ion-spinner *ngIf="loading"></ion-spinner>
+                           <span *ngIf="!loading"><fa-icon style="margin: 5px" [icon]="faCoffee"></fa-icon>ارسال کد مجموعه</span>
+                       </ion-button>
+                   </form>
+               </div>
         </div>
-        <ion-button   [disabled]="loading" type="submit"  class="button item-input"  expand="block" color="danger">
-          <ion-spinner *ngIf="loading" ></ion-spinner>
-          <span *ngIf="!loading"><fa-icon style="margin: 5px" [icon]="faCoffee"></fa-icon>ارسال کد مجموعه</span>
-        </ion-button>
-      </form>
-    </ion-card-content>
-  </ion-card>
-</div>
-
-
-
-
-
+    </div>
 </ion-content>
