--- a/src/app/login/login/login.page.html
+++ b/src/app/login/login/login.page.html
@@ -1,39 +1,45 @@
 <ion-content class="background">
 
 
-  <div class="container">
+  <div class="mycontainer">
 
-    <ion-card>
-      <ion-card-header dir="auto">
-        <div style="display: flex" class="ion-justify-content-center">
-          <img height="100px" src="assets/logo.png">
-        </div>
-      </ion-card-header>
-      <ion-card-content>
+    <div class="card-bg">
+      <div style="display: flex;margin-top: -75px;margin-bottom: 25px" class="ion-justify-content-center">
+        <img height="100px" src="assets/logo.svg">
+      </div>
+
+      <div class="container">
         <form [formGroup]="form" (ngSubmit)="login()">
           <ion-item class="item-input" >
             <ion-label  position="floating" class="text-style button">نام کاربری</ion-label>
             <ion-input  formControlName="user_name" type="text"></ion-input>
           </ion-item>
+          <div class="validation-box">
+            <div *ngIf="form.get('user_name').valid">&nbsp;</div>
+            <div *ngIf="form.get('user_name').invalid && sSubmit">
+              <ion-icon name="information-circle" size="small"></ion-icon>
+              <span>نام کاربری را وارد کنید.</span>
+            </div>
+          </div>
           <ion-item>
             <ion-label position="floating"  class="text-style button">رمز ورود</ion-label>
             <ion-input  formControlName="password" type="password"></ion-input>
           </ion-item>
           <div class="validation-box">
-            <div *ngIf="form.invalid">&nbsp;</div>
-            <div *ngIf="form.invalid && sSubmit">
+            <div *ngIf="form.get('password').valid">&nbsp;</div>
+            <div *ngIf="form.get('password').invalid && sSubmit">
               <ion-icon name="information-circle" size="small"></ion-icon>
-              <span>فیلد خالی را پر کنید</span>
+              <span>رمز عبور را وارد کنید.</span>
             </div>
           </div>
-          <ion-button  type="submit" class="button"  expand="block" color="danger">
+          <ion-button  type="submit" class="button"  expand="block" color="primary">
             <ion-spinner *ngIf="loading" ></ion-spinner>
             <span *ngIf="!loading"><fa-icon style="margin: 10px" [icon]="faSign"></fa-icon >ورود</span>
           </ion-button>
         </form>
 
-      </ion-card-content>
-    </ion-card>
+      </div>
+    </div>
 
   </div>
 
