--- a/src/app/pages/reciption-situation/reciption-situation.page.html
+++ b/src/app/pages/reciption-situation/reciption-situation.page.html
@@ -1,11 +1,11 @@
 <ion-header>
     <ion-toolbar class="no-bg">
 
-        <ion-buttons slot="start">
-            <ion-back-button [defaultHref]="['/home']"></ion-back-button>
+        <ion-buttons slot="end">
+            <ion-back-button (click)="back()" [defaultHref]="['/home']"></ion-back-button>
         </ion-buttons>
         <ion-title class="ion-text-center">گزارش وضعیت پذیرش</ion-title>
-        <ion-buttons slot="end">
+        <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
     </ion-toolbar>
@@ -13,62 +13,41 @@
 </ion-header>
 
 
-
-<ion-content class="main">
-    <div  style="padding-right: 5px" dir="ltr" class="name-box">
-        {{m}}
-    </div>
-<ion-card>
-    <ion-header dir="rtl">
-        افراد   در مجموعه
-    </ion-header>
-
-        <ion-card-content style="display: flex" class="ion-justify-content-between">
-            <div>
-                <ion-icon name="arrow-redo-circle-outline"></ion-icon>
-            </div>
-            <div>
-                {{presentNumber}}نفر
-            </div>
-        </ion-card-content>
-    </ion-card>
-    <ion-card>
-        <ion-header dir="rtl">
-           افراد خارج شده
-        </ion-header>
-
-        <ion-card-content style="display: flex" class="ion-justify-content-between">
-            <div>
-                <ion-icon name="arrow-undo-circle-outline"></ion-icon>
-
-            </div>
-            <div>
-                {{exitNumber}}نفر
-            </div>
-        </ion-card-content>
-    </ion-card><ion-card>
-    <ion-header dir="rtl">
-        مجموع افراد
-    </ion-header>
-
-    <ion-card-content style="display: flex" class="ion-justify-content-between">
-        <div>
-            <ion-icon name="arrow-undo-circle-outline"></ion-icon>
-            <ion-icon name="arrow-redo-circle-outline"></ion-icon>
-        </div>
-        <div>
-             {{all}}نفر
-        </div>
-    </ion-card-content>
-</ion-card>
-    <ion-card>
-
-
-    </ion-card>
+<ion-content class="background ion-padding">
+    <ion-list>
+        <ion-item>
+            <ion-icon color="primary" slot="start" name="arrow-back-outline"></ion-icon>
+            <ion-label>
+                <h2>افراد در مجموعه</h2>
+            </ion-label>
+            <ion-label slot="end">
+                <h2>{{presentNumber}}نفر</h2>
+            </ion-label>
+        </ion-item>
+        <ion-item>
+            <ion-icon color="primary" slot="start" name="arrow-forward-outline"></ion-icon>
+            <ion-label>
+                <h2>افراد خارج شده</h2>
+            </ion-label>
+            <ion-label slot="end">
+                <h2>{{exitNumber}}نفر</h2>
+            </ion-label>
+        </ion-item>
+        <ion-item>
+            <ion-icon color="primary" slot="start" name="swap-horizontal-outline"></ion-icon>
+            <ion-label>
+                <h2>مجموع</h2>
+            </ion-label>
+            <ion-label slot="end">
+                <h2>{{all}}نفر</h2>
+            </ion-label>
+        </ion-item>
+    </ion-list>
 </ion-content>
 <ion-footer>
     <ion-toolbar class="no-bg">
-        <ion-button *ngIf="data.organization_unit && filterActive" (click)="filterAction()" fill="outline" expand="block">
+        <ion-button *ngIf="data.organization_unit && filterActive" (click)="filterAction()" fill="outline"
+                    expand="block">
             اعمال فیلتر
         </ion-button>
         <ion-grid *ngIf="filterActive">
@@ -77,7 +56,10 @@
                     <div>
                         <ion-item dir="rtl">
                             <ion-label>از تاریخ</ion-label>
-                            <ion-datetime value="1397-12-15T13:47:20.789" displayFormat="YYYY/MM/DD"  [pickerOptions]="fromPickerOptions" pickerFormat="DDD MM YYYY" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" [yearValues]="customYearValues"></ion-datetime>
+                            <ion-datetime value="1397-12-15T13:47:20.789" displayFormat="YYYY/MM/DD"
+                                          [pickerOptions]="fromPickerOptions" pickerFormat="DDD MM YYYY"
+                                          monthValues="1,2,3,4,5,6,7,8,9,10,11,12"
+                                          [yearValues]="customYearValues"></ion-datetime>
                         </ion-item>
                     </div>
                 </ion-col>
@@ -87,7 +69,9 @@
                     <div>
                         <ion-item dir="rtl">
                             <ion-label>تا تاریخ</ion-label>
-                            <ion-datetime [value]="m" displayFormat="YYYY/MM/DD" pickerFormat="DDD MM YYYY" [pickerOptions]="untilPickerOptions" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" [yearValues]="customYearValues"></ion-datetime>
+                            <ion-datetime [value]="m" displayFormat="YYYY/MM/DD" pickerFormat="DDD MM YYYY"
+                                          [pickerOptions]="untilPickerOptions" monthValues="1,2,3,4,5,6,7,8,9,10,11,12"
+                                          [yearValues]="customYearValues"></ion-datetime>
                         </ion-item>
                     </div>
                 </ion-col>
@@ -96,10 +80,10 @@
             <ion-row>
                 <ion-col>
                     <ion-item dir="rtl" (click)="selectPackage()">
-                        <ion-label >
+                        <ion-label>
                             انتخاب مجموعه
                         </ion-label>
-                        <ion-text >
+                        <ion-text>
                             {{unitName}}
                         </ion-text>
                     </ion-item>
@@ -107,7 +91,7 @@
             </ion-row>
         </ion-grid>
 
-        <ion-button (click)="filter()" expand="block">
+        <ion-button color="primary" (click)="filter()" expand="block">
             فیلتر
         </ion-button>
     </ion-toolbar>
