--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,15 +1,26 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
+@font-face {
+  font-family: 'Sans';
+  src: url(/assets/font/IRANSansWeb.eot),
+  url('/assets/font/IRANSansWeb.woff') format('woff'),
+  url('/assets/font/IRANSansWeb.ttf') format('truetype');
+}
+p,span,div,input,label,option,select,h1,h2,h3,h4,h5,h6{
+  font-family: Sans,Tahoma;
+}
+
+
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+  --ion-color-primary: #55a2ce;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #55a2ce;
+  --ion-color-primary-tint: #55a2ce;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
@@ -28,12 +39,12 @@
   --ion-color-tertiary-tint: #6370ff;
 
   /** success **/
-  --ion-color-success: #2dd36f;
+  --ion-color-success: #474749;
   --ion-color-success-rgb: 45, 211, 111;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #28ba62;
-  --ion-color-success-tint: #42d77d;
+  --ion-color-success-shade: #474749;
+  --ion-color-success-tint: #474749;
 
   /** warning **/
   --ion-color-warning: #ffc409;
@@ -74,6 +85,7 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+  --ion-font-family: Sans;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -225,4 +237,5 @@
 
     --ion-tab-bar-background: #1f1f1f;
   }
+
 }
