--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -56,7 +56,7 @@
                         </ion-col>
                         <ion-col>
                             <div>
-                                <p>{{SumTotalAmount_Receipt}}</p>
+                                <p>{{SumTotalAmount_Receipt}} ریال</p>
                             </div>
                         </ion-col>
                     </ion-row>
