--- a/src/app/pages/functionality/functionality.page.html
+++ b/src/app/pages/functionality/functionality.page.html
@@ -26,7 +26,7 @@
                     </ion-row>
                     <ion-row>
                         <ion-col dir="rtl">
-                            {{model.TotalAmount | currency}} ریال
+                            {{model.TotalAmount  }} ریال
                         </ion-col>
                     </ion-row>
                 </ion-grid>
