--- a/src/app/pages/default/default.page.html
+++ b/src/app/pages/default/default.page.html
@@ -4,7 +4,7 @@
             <ion-list style="margin-top: 0;padding-top: 0" id="inbox-list">
                 <ion-list-header class=" ion-padding" color="light">
                     <ion-label class="ion-text-center">
-                        <img height="100px" src="/assets/logo.svg"/>
+                        <img height="100px" src="assets/logo.svg" alt="ورزش سافت"/>
                         <h2>{{managerName}}</h2>
                     </ion-label>
                 </ion-list-header>
