--- a/src/app/pages/functionality/functionality.page.html
+++ b/src/app/pages/functionality/functionality.page.html
@@ -2,14 +2,13 @@
     <ion-toolbar class="no-bg">
 
         <ion-buttons slot="end">
-            <ion-back-button (click)="back()" [defaultHref]="['/home']"></ion-back-button>
+            <ion-button (click)="back()" [defaultHref]="['/home']"><fa-icon [icon]="faChevronLeft"></fa-icon></ion-button>
         </ion-buttons>
         <ion-title class="ion-text-center">گزارشات عملکرد</ion-title>
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
     </ion-toolbar>
-
 </ion-header>
 
 <ion-content class="ion-padding background">
