--- a/src/app/pages/recive-report/recive-report.page.html
+++ b/src/app/pages/recive-report/recive-report.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar class="no-bg">
 
     <ion-buttons slot="end">
-      <ion-back-button (click)="back()" [defaultHref]="['/home']"></ion-back-button>
+      <ion-button (click)="back()" [defaultHref]="['/home']"><fa-icon [icon]="faChevronLeft"></fa-icon></ion-button>
     </ion-buttons>
     <ion-title class="ion-text-center"> گزارشات دریافتی </ion-title>
     <ion-buttons slot="start">
