ast update error

--- a/src/app/pages/functionality/functionality.page.html
+++ b/src/app/pages/functionality/functionality.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar class="no-bg">
 
         <ion-buttons slot="end">
-            <ion-button (click)="back()" [defaultHref]="['/home']"><fa-icon [icon]="faChevronLeft"></fa-icon></ion-button>
+            <ion-button (click)="back()"><fa-icon [icon]="faChevronLeft"></fa-icon></ion-button>
         </ion-buttons>
         <ion-title class="ion-text-center">گزارشات عملکرد</ion-title>
         <ion-buttons slot="start">
