--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -60,7 +60,7 @@
                                 </ion-col>
                                 <ion-col>
                                     <div>
-                                        <p>{{SumTotalAmount_Receipt | perNumber}} ریال</p>
+                                        <p>{{SumTotalAmount_Receipt }} ریال</p>
                                     </div>
                                 </ion-col>
                             </ion-row>
