--- a/src/app/pages/reciption-situation/reciption-situation.page.html
+++ b/src/app/pages/reciption-situation/reciption-situation.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar class="no-bg">
 
         <ion-buttons slot="end">
-            <ion-button (click)="back()" [defaultHref]="['/home']"><fa-icon [icon]="faSignInAlt"></fa-icon></ion-button>
+            <ion-button (click)="back()" ><fa-icon [icon]="faSignInAlt"></fa-icon></ion-button>
         </ion-buttons>
         <ion-title class="ion-text-center">گزارش وضعیت پذیرش</ion-title>
         <ion-buttons slot="start">
