add every thing without photo

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,7 +16,7 @@
             <ion-label>
                 <ion-row>
                     <ion-col>تاریخ: </ion-col>
-                    <ion-col class="ion-text-end">{{m | perNumber}}</ion-col>
+                    <ion-col class="ion-text-end">{{date | perNumber}}</ion-col>
                 </ion-row>
             </ion-label>
         </ion-item>
