--- a/src/app/pages/functionality/functionality.page.html
+++ b/src/app/pages/functionality/functionality.page.html
@@ -35,9 +35,11 @@
 </ion-content>
 <ion-footer>
     <ion-toolbar *ngIf="filterActive">
-        <ion-button *ngIf="data.organization_unit && filterActive" (click)="filterAction()" fill="outline"
+        <ion-button [disabled]="loadingAction" *ngIf="data.organization_unit && filterActive" (click)="filterAction()" fill="outline"
                     expand="block">
-            اعمال فیلتر
+            <ion-spinner *ngIf="loadingAction" ></ion-spinner>
+            <span *ngIf="!loadingAction">اعمال فیلتر</span>
+
         </ion-button>
         <ion-grid>
             <ion-row>
@@ -45,7 +47,7 @@
                     <div>
                         <ion-item dir="rtl">
                             <ion-label>از تاریخ</ion-label>
-                            <ion-datetime value="1397-12-15T13:47:20.789" displayFormat="YYYY/MM/DD"
+                            <ion-datetime [value]="m" displayFormat="YYYY/MM/DD"
                                           [pickerOptions]="fromPickerOptions" pickerFormat="DDD MM YYYY"
                                           monthValues="1,2,3,4,5,6,7,8,9,10,11,12"
                                           [yearValues]="customYearValues"></ion-datetime>
@@ -83,8 +85,9 @@
 
     </ion-toolbar>
     <ion-toolbar>
-        <ion-button color="primary" (click)="filter()" expand="block">
-            فیلتر
+        <ion-button [disabled]="loading" color="primary" (click)="filter()" expand="block">
+            <ion-spinner *ngIf="loading" ></ion-spinner>
+            <span *ngIf="!loading">فیلتر</span>
         </ion-button>
     </ion-toolbar>
 </ion-footer>
