--- a/src/app/pages/reciption-situation/reciption-situation.page.html
+++ b/src/app/pages/reciption-situation/reciption-situation.page.html
@@ -56,7 +56,7 @@
                     <div>
                         <ion-item dir="rtl">
                             <ion-label>از تاریخ</ion-label>
-                            <ion-datetime value="1397-12-15T13:47:20.789" displayFormat="YYYY/MM/DD"
+                            <ion-datetime [value]="m" displayFormat="YYYY/MM/DD"
                                           [pickerOptions]="fromPickerOptions" pickerFormat="DDD MM YYYY"
                                           monthValues="1,2,3,4,5,6,7,8,9,10,11,12"
                                           [yearValues]="customYearValues"></ion-datetime>
@@ -91,8 +91,9 @@
             </ion-row>
         </ion-grid>
 
-        <ion-button color="primary" (click)="filter()" expand="block">
-            فیلتر
+        <ion-button [disabled]="loading" color="primary" (click)="filter()" expand="block">
+            <ion-spinner *ngIf="loading" ></ion-spinner>
+            <span *ngIf="!loading">فیلتر</span>
         </ion-button>
     </ion-toolbar>
 </ion-footer>
